[gd_scene load_steps=5 format=2]

[ext_resource path="res://UserInput.gd" type="Script" id=1]
[ext_resource path="res://GuessRow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://ShowOnState.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 404.0
margin_top = 156.0
margin_right = 620.0
margin_bottom = 444.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guesses" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 216.0
margin_bottom = 260.0

[node name="GuessRow1" parent="CenterContainer/VBoxContainer/Guesses" instance=ExtResource( 2 )]

[node name="GuessRow2" parent="CenterContainer/VBoxContainer/Guesses" instance=ExtResource( 2 )]
margin_top = 44.0
margin_bottom = 84.0

[node name="GuessRow3" parent="CenterContainer/VBoxContainer/Guesses" instance=ExtResource( 2 )]
margin_top = 88.0
margin_bottom = 128.0

[node name="GuessRow4" parent="CenterContainer/VBoxContainer/Guesses" instance=ExtResource( 2 )]
margin_top = 132.0
margin_bottom = 172.0

[node name="GuessRow5" parent="CenterContainer/VBoxContainer/Guesses" instance=ExtResource( 2 )]
margin_top = 176.0
margin_bottom = 216.0

[node name="GuessRow6" parent="CenterContainer/VBoxContainer/Guesses" instance=ExtResource( 2 )]
margin_top = 220.0
margin_bottom = 260.0

[node name="UserInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 216.0
margin_bottom = 288.0
align = 1
max_length = 5
script = ExtResource( 1 )

[node name="WinScreen" type="Control" parent="CenterContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 4 )
show_state = 1

[node name="WinScreen" type="Label" parent="CenterContainer/WinScreen"]
margin_left = -89.0
margin_top = -7.0
margin_right = 88.0
margin_bottom = 7.0
text = "You guessed the right word!"

[node name="LoseScreen" type="Control" parent="CenterContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 4 )
show_state = 2

[node name="LoseScreen" type="Label" parent="CenterContainer/LoseScreen"]
margin_left = -92.0
margin_top = -16.0
margin_right = 92.0
margin_bottom = 15.0
text = "You failed to guess the word.
  Better luck next time!"

[node name="FadedBackground" type="ColorRect" parent="CenterContainer/LoseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="CenterContainer/VBoxContainer/UserInput" to="CenterContainer/VBoxContainer/UserInput" method="_on_text_entered"]
[connection signal="user_guessed" from="CenterContainer/VBoxContainer/UserInput" to="." method="_on_user_guessed"]
